# TrainPulse

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GO_TUI_REFACTOR_PLAN.md  LICENSE  README.md  RELEASE.md  SECURITY.md  config.example.toml  go.mod  go.sum  pyproject.toml
cmd/trainpulse/: main.go  main_test.go
docs/: go-migration.md  tui-concept.md  tui-redesign.md
internal/config/: config.go  config_test.go
internal/context/: context.go  context_test.go  redact.go
internal/doctor/: doctor.go
internal/events/: events.go  policy.go
internal/notifier/: feishu.go  feishu_test.go
internal/runtime/: executil.go  runner.go  runner_test.go  signal_unix.go  timeutil.go
internal/status/: status.go
internal/store/: store.go
internal/tmux/: tmux.go
internal/tui/: actions.go  actions_test.go  layout_test.go  model.go  model_test.go  run.go  state.go  styles.go  tui.go  types.go  update.go  update_test.go  view.go  view_test.go
internal/version/: version.go
scripts/: build_release.sh  install_trainpulse_binary.sh
tests/: test_cli_config.py  test_cli_stop_reconcile.py  test_cli_tmux_run.py  test_context.py  test_integration_cli.py  test_notifier.py  test_runner.py
train_notify/: __init__.py  cli.py
train_notify/core/: __init__.py  context.py  notifier.py  redact.py
train_notify/integrations/: tmux.py
trainpulse/: __init__.py  cli.py
trainpulse-skill/: SKILL.md
trainpulse-skill/agents/: openai.yaml
trainpulse-skill/references/: commands.md
trainpulse/core/: __init__.py  context.py  models.py  notifier.py  runner.py  store.py  timeutil.py
trainpulse/integrations/: __init__.py
