[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "train-notify"
version = "0.1.0"
description = "Cross-repository training notification and supervision tool for Feishu webhook."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Train Notify Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
train-notify = "train_notify.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["train_notify*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
